# ndmath

./: Cargo.toml  readme.md
src/: aabb.rs  lib.rs  scalar.rs
