[package]
categories = ['rust-patterns', 'algorithms']
description = 'Traits for doing vector geometry operations using built-in types'
edition = '2021'
keywords = ['math', 'geometry', 'vector']
license = 'Unlicense'
name = 'ndmath'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/ndmath'
version = '0.1.1'
